--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hello-pangea/dnd": "^18.0.1",
     "axios": "^1.13.2",
     "react": "^19.2.0",
-    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^19.2.0"
   },
   "devDependencies": {
